corpus/cpp/overload/case-01/snapshots/gcc15/render.default.txt
error: type or overload mismatch
--> src/main.cpp:5:5
help: compare the expected type and actual argument at the call site
why: no matching function for call to 'takes(int)'
| src/main.cpp:5:5
|     takes(1);
|     ^
because: candidate 1: 'void takes(int, int)' at src/main.cpp:1:6
because: candidate expects 2 arguments, 1 provided at src/main.cpp:1:6
because: candidate 2: 'void takes(double, double)' at src/main.cpp:2:6
omitted 1 other overload notes
other errors:
  - src/main.cpp:5:10: error: type or overload mismatch
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output